--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "style": "sass --watch styles/main.scss styles/main.css",
+    "style": "sass --watch src/sass/main.scss src/sass/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "normalize-scss": "^7.0.1"
+  },
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
