--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "final markup task",
+  "name": "final_markup_task",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "style": "sass --watch src/sass/main.scss src/sass/main.css",
+    "dev": "webpack --mode development --watch",
+    "prod": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1",
     "normalize-scss": "^7.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "node-sass": "^7.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   }
