--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "style": "sass --watch src/sass/main.scss src/sass/main.css",
-    "dev": "webpack --mode development --watch",
+    "dev": "webpack --mode development",
     "prod": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,8 +21,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
-    "resolve-url-loader": "^5.0.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
